<resources>
    <string name="a">Add bookmark</string>
    <string name="b">Add to homepage</string>
    <string name="c">Allow</string>
    <string name="d">Blank page</string>
    <string name="e">Block domain</string>
    <string name="f">Block link</string>
    <string name="g">Bookmarks</string>
    <string name="h">Choose a folder…</string>
    <string name="i">Close</string>
    <string name="j">Close all tabs</string>
    <string name="k">Close other tabs</string>
    <string name="l">Close tabs to the bottom</string>
    <string name="m">Close tabs to the top</string>
    <string name="n">Copy link</string>
    <string name="o">Copy download link</string>
    <string name="p">Copy link text</string>
    <string name="q">Copy text</string>
    <string name="r">Default location</string>
    <string name="s">Delete</string>
    <string name="t">Delete all</string>
    <string name="u">Refuse</string>
    <string name="v">Download</string>
    <string name="w">Downloads</string>
    <string name="x">Edit</string>
    <string name="y">Favorites</string>
    <string name="z">Find in page</string>
    <string name="a0">Full-screen</string>
    <string name="a1">History</string>
    <string name="a2">Incognito mode</string>
    <string name="a3">Keep</string>
    <string name="a4">Favorite manager</string>
    <string name="a5">Mark as ad</string>
    <string name="a6">Modify</string>
    <string name="a7">New</string>
    <string name="a8">New tab</string>
    <string name="a9">Night mode</string>
    <string name="a_">Open in background</string>
    <string name="aa">Open in new tab</string>
    <string name="ab">Page info</string>
    <string name="ac">Desktop site</string>
    <string name="ad">Picture mode</string>
    <string name="ae">Play with…</string>
    <string name="af">Preview</string>
    <string name="ag">Re-download</string>
    <string name="ah">Reset</string>
    <string name="ai">Save</string>
    <string name="aj">Save image</string>
    <string name="ak">Save page</string>
    <string name="al">Saved pages</string>
    <string name="am">Share</string>
    <string name="an">View source</string>
    <string name="ao">Tools</string>
    <string name="ap">Translate</string>
    <string name="aq">Unblock domain</string>
    <string name="ar">Unblock link</string>
    <string name="as">View Cookies</string>
    <string name="at">View image</string>
    <string name="au">View in settings</string>
    <string name="av">Webpage</string>
    <string name="aw">Adaptive</string>
    <string name="ax">Disable ad blocking for a specific site.</string>
    <string name="ay">Enable ad blocking for a specific site.</string>
    <string name="az">Enabled: %1$d ads blocked, %2$s saved</string>
    <string name="b0">Add exclude</string>
    <string name="b1">Add filter subscription</string>
    <string name="b2">Add match</string>
    <string name="b3">New script</string>
    <string name="b4">Add shortcut</string>
    <string name="b5">Add site exception</string>
    <string name="b6">Add to home screen</string>
    <string name="b7">Added to homepage successfully</string>
    <string name="b8">Download manager</string>
    <string name="b9">Address bar actions</string>
    <string name="b_">User-agent</string>
    <string name="ba">Set user-agent for a specific site.</string>
    <string name="bb">Android (Phone)</string>
    <string name="bc">Android (Tablet)</string>
    <string name="bd">Chrome (PC)</string>
    <string name="be">Custom</string>
    <string name="bf">Windows (IE 11)</string>
    <string name="bg">iPad</string>
    <string name="bh">iPhone</string>
    <string name="bi">macOS</string>
    <string name="bj">Symbian</string>
    <string name="bk">Windows (Chrome)</string>
    <string name="bl">Windows (IE 11)</string>
    <string name="bm">Agree</string>
    <string name="bn">You need to agree and accept all the terms before you start using our service.</string>
    <string name="bo">All sites</string>
    <string name="bp">All time</string>
    <string name="bq">Allow</string>
    <string name="br">Allow page redirection?</string>
    <string name="bs">Allow page redirection to %1$s?</string>
    <string name="bt">Allow once</string>
    <string name="bu">Allow webpage access to clipboard</string>
    <string name="bv">Allow website to open %1$s?</string>
    <string name="bw">Allowed</string>
    <string name="bx">It has already been set as default</string>
    <string name="by">Always restore</string>
    <string name="bz">Via is downloading files</string>
    <string name="c0">Tap to view downloads</string>
    <string name="c1">Via</string>
    <string name="c2">Appearance</string>
    <string name="c3">Ascii2D</string>
    <string name="c4">Ask first</string>
    <string name="c5" formatted="false">Are you sure you want to copy text from %DOMAIN%?</string>
    <string name="c6">Auto sync</string>
    <string name="c7">Back/Forward gesture</string>
    <string name="c8">Color</string>
    <string name="c9">Image</string>
    <string name="c_">Baidu</string>
    <string name="ca">Bing</string>
    <string name="cb">Block</string>
    <string name="cc">Block third-party cookies</string>
    <string name="cd">Ad blocking</string>
    <string name="ce">"Blocked: %1$s
Refresh to take effect."</string>
    <string name="cf">Block pop-up</string>
    <string name="cg">Blocked pop-up window</string>
    <string name="ch">Blocked</string>
    <string name="ci">Bold</string>
    <string name="cj">Bookmark added</string>
    <string name="ck">Bookmarks data is too big to upload, but other data will be uploaded normally. Continue?</string>
    <string name="cl">Bookmarks exported successfully</string>
    <string name="cm">%1$d bookmarks imported</string>
    <string name="cn">Built-in download manager</string>
    <string name="co">Camera</string>
    <string name="cp">Allow a specific site to use your camera.</string>
    <string name="cq">Block a specific site to use your camera.</string>
    <string name="cr">Ask first before allowing sites to use your camera</string>
    <string name="cs">Can not sort the list when sorting alphabetically</string>
    <string name="ct">Cancel all</string>
    <string name="cu">It can be downloaded only from \"http\" or \"https\" URLs.</string>
    <string name="cv">Cannot read this page aloud</string>
    <string name="cw">It can only work with \"http\" or \"https\" URLs.</string>
    <string name="cx">It can only work if JavaScript is allowed.</string>
    <string name="cy">It cannot work on this site.</string>
    <string name="cz">Basics</string>
    <string name="d0">Content</string>
    <string name="d1">Permissions</string>
    <string name="d2">&lt;b>ISSUED TO&lt;/b>&lt;br /> &lt;b>Common Name (CN)&lt;/b>&lt;br /> %1$s &lt;br />&lt;b>Organization (O)&lt;/b>&lt;br /> %2$s &lt;br />&lt;b>Organizational Unit (OU)&lt;/b>&lt;br /> %3$s &lt;br />&lt;br />&lt;b>ISSUED BY&lt;/b>&lt;br /> &lt;b>Common Name (CN)&lt;/b>&lt;br /> %4$s &lt;br />&lt;b>Organization (O)&lt;/b>&lt;br /> %5$s &lt;br />&lt;br />&lt;b>VALIDITY PERIOD&lt;/b>&lt;br /> &lt;b>Issued On&lt;/b>&lt;br /> %6$s &lt;br />&lt;b>Expires On&lt;/b>&lt;br /> %7$s &lt;br /></string>
    <string name="d3">&lt;b>SHA-256 FINGERPRINTS&lt;/b>&lt;br /> &lt;b>Certificate&lt;/b>&lt;br /> %1$s &lt;br />&lt;b>Public Key&lt;/b>&lt;br /> %2$s &lt;br /></string>
    <string name="d4">Certificate information</string>
    <string name="d5">Check for updates</string>
    <string name="d6">Permission denied. Would you like to set it in settings now?</string>
    <string name="d7">Checking for updates</string>
    <string name="d8">Chinese</string>
    <string name="d9">Clear data</string>
    <string name="d_">Clear data on exit</string>
    <string name="da">Clear search history</string>
    <string name="db">Are you sure you want to clear search history?</string>
    <string name="dc">Clear the website icon cache</string>
    <string name="dd">Note that this will clear all the favorite icons on the homepage. Each icon will be downloaded the next time you visit the corresponding website.</string>
    <string name="de">Clipboard</string>
    <string name="df">Allow a specific site to use your clipboard.</string>
    <string name="dg">Block a specific site to use your clipboard.</string>
    <string name="dh">Allow sites to use your clipboard</string>
    <string name="di">Ask first before allowing sites to use your clipboard</string>
    <string name="dj">Block sites to use your clipboard</string>
    <string name="dk">Close %s</string>
    <string name="dl">Cloud data server</string>
    <string name="dm">Service unavailable.</string>
    <string name="dn">Color mode</string>
    <string name="do">Auto-adjust color of toolbars</string>
    <string name="dp">Confirm to delete</string>
    <string name="dq">Confirm to leave</string>
    <string name="dr">Connection timed out</string>
    <string name="ds">Contact us</string>
    <string name="dt">Continue loading</string>
    <string name="du">Cookies</string>
    <string name="dv">Allow sites to save and read cookie data</string>
    <string name="dw">Allowed, except third party</string>
    <string name="dx">Corner radius</string>
    <string name="dy">Close</string>
    <string name="dz">"We're sorry that the app crashed."</string>
    <string name="e0">Something went wrong. :(</string>
    <string name="e1">Restart</string>
    <string name="e2">Create shortcut for %1$s successfully</string>
    <string name="e3">Custom CSS</string>
    <string name="e4">Custom filter</string>
    <string name="e5">Custom filters</string>
    <string name="e6">Including custom filters and marked ads</string>
    <string name="e7">Custom reader CSS</string>
    <string name="e8">Custom URL</string>
    <string name="e9">Reset</string>
    <string name="e_">Customize menu</string>
    <string name="ea">App cache</string>
    <string name="eb">Cache</string>
    <string name="ec">Data cleared</string>
    <string name="ed">Cookies (Login status)</string>
    <string name="ee">Data exported successfully</string>
    <string name="ef">Data export</string>
    <string name="eg">Form data</string>
    <string name="eh">History</string>
    <string name="ei">Web storage</string>
    <string name="ej">Debugging info</string>
    <string name="ek">EEE, MMM dd, yyyy</string>
    <string name="el">%1$s (default)</string>
    <string name="em">Default</string>
    <string name="en">Delete account</string>
    <string name="eo">Delete the account from the server</string>
    <string name="f1">Icon of a favorite</string>
    <string name="f5">Paste text</string>
    <string name="f7">Swap language</string>
    <string name="ft">Resume</string>
    <string name="gj">Empty</string>
    <string name="hh">Fastforward</string>
    <string name="ig">"Tap the screen to grant camera permission 
to scan the code"</string>
    <string name="ip">Folder</string>
    <string name="is">Title</string>
    <string name="it">URL</string>
    <string name="kn">Expand</string>
    <string name="ko">Please click on the ad area to mark it</string>
    <string name="kp">Move view</string>
    <string name="kq">Shrink</string>
    <string name="lr">Navigation up</string>
    <string name="oo">Rewind</string>
    <string name="oz">Scan QR code from image</string>
    <string name="po">Would you like to set it as homepage?</string>
    <string name="ps">Settings</string>
    <string name="pu">Advanced</string>
    <string name="qf">Background</string>
    <string name="qh">Logo</string>
    <string name="qi">Search bar</string>
    <string name="r7">Switch flash</string>
    <string name="tv">Text</string>
    <string name="ub">Edit favorite</string>
    <string name="wb">Uses digest access authentication</string>
</resources>