<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        android:id="@id/be"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="48.0dip" />
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@id/ck"
        android:background="#ff333333"
        android:paddingLeft="16.0dip"
        android:paddingRight="16.0dip"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/b">
        <TextView
            android:textColor="@color/af"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="@string/po"
            android:layout_weight="1.0" />
        <TextView
            android:textColor="?a6"
            android:gravity="center"
            android:id="@id/ez"
            android:background="@drawable/n"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:minWidth="56.0dip"
            android:text="@android:string/ok" />
    </LinearLayout>
    <FrameLayout
        android:id="@id/bf"
        android:background="@color/af"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="136.0dip"
        android:layout_above="@id/d0"
        android:translationY="160.0dip" />
    <RadioGroup
        android:orientation="horizontal"
        android:id="@id/d0"
        android:background="@android:color/white"
        android:layout_width="fill_parent"
        android:layout_height="48.0dip"
        android:layout_alignParentBottom="true">
        <RadioButton
            android:id="@id/cy"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/qh"
            android:layout_weight="1.0"
            style="@style/g" />
        <RadioButton
            android:id="@id/cz"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/qi"
            android:layout_weight="1.0"
            style="@style/g" />
        <RadioButton
            android:id="@id/cw"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/qf"
            android:layout_weight="1.0"
            style="@style/g" />
        <RadioButton
            android:id="@id/cx"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/y"
            android:layout_weight="1.0"
            style="@style/g" />
        <RadioButton
            android:id="@id/cv"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/pu"
            android:layout_weight="1.0"
            style="@style/g" />
    </RadioGroup>
</RelativeLayout>