<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:textSize="@dimen/a9"
        android:textColor="?ac"
        android:textColorHint="?ac"
        android:ellipsize="end"
        android:gravity="center"
        android:id="@id/ej"
        android:paddingLeft="16.0dip"
        android:paddingTop="4.0dip"
        android:paddingRight="16.0dip"
        android:paddingBottom="4.0dip"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:hint="@string/ko"
        android:maxLines="1"
        android:lines="1" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="48.0dip">
        <ImageView
            android:gravity="center"
            android:id="@id/cd"
            android:background="@drawable/o"
            android:padding="12.0dip"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:src="@drawable/a_"
            android:tint="?a8"
            android:layout_weight="1.0"
            android:contentDescription="@string/kp" />
        <TextView
            android:textColor="?ab"
            android:gravity="center"
            android:id="@id/el"
            android:background="@drawable/o"
            android:layout_width="0.0dip"
            android:layout_height="48.0dip"
            android:text="@string/kn"
            android:layout_weight="1.0" />
        <TextView
            android:textColor="?ab"
            android:gravity="center"
            android:id="@id/f0"
            android:background="@drawable/o"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/kq"
            android:layout_weight="1.0" />
        <TextView
            android:textColor="?ab"
            android:gravity="center"
            android:id="@id/ey"
            android:background="@drawable/o"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/ai"
            android:layout_weight="1.0" />
        <TextView
            android:textColor="?ab"
            android:gravity="center"
            android:id="@id/ed"
            android:background="@drawable/o"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@android:string/cancel"
            android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>